Fix several issues at gallery
 - Fix scaled image clipped when image scaled up by horver
 - Make swipper don't break layout when internet connection failed.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,15 +1,3 @@
-#galleryContainer {
-    width: auto;
-    display: inline-block;
-}
-
-.galleryContent {
-  background: #FBFBFB;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 body {
     background-color: lightblue;
 }
@@ -61,7 +49,8 @@ h1 {
 /* More gallery */
 
 .moreImageContainer {
-  max-height: 300vh;
+  max-height: 1400px;
+  overflow-x: scroll;
 
   display: flex;
   flex-wrap: wrap;
@@ -78,10 +67,26 @@ h1 {
 }
 
 /* Swipper */
+.galleryContent {
+  background: #FBFBFB;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.galleryContainer {
+  width: auto;
+  display: inline-block;
+  padding: 50px;
+  max-height: 500px; /* Will be used when we fail to load image so swipper is break down. */
+  overflow: hidden;
+}
+
 .swiper {
     width: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
+    overflow: visible !important;
 }
 
 .swiper-slide {
